<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.TestResultActivity">

    <TextView
        android:id="@+id/text_amount_correct_words"
        style="@style/text_on_secondary.h3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/amount_correct_words"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/text_label_mistakes"
        style="@style/text_on_secondary.h4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/mistakes_in_words"
        app:layout_constraintTop_toBottomOf="@+id/text_amount_correct_words" />

    <ListView
        android:id="@+id/list_incorrect_words"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_label_mistakes" />

    <TextView
        android:id="@+id/text_label_all_words_correct"
        style="@style/text_on_secondary.h4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_words_correct"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_label_mistakes"
        android:textStyle="italic"/>



</androidx.constraintlayout.widget.ConstraintLayout>