<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.WordEditorActivity">
    <TextView
        android:id="@+id/text_label_word_original"
        style="@style/text_on_secondary.h4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/original"
        app:layout_constraintBottom_toBottomOf="@+id/edit_word_original"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_word_original" />

    <EditText
        android:id="@+id/edit_word_original"
        style="@style/text_on_secondary.h4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_label_word_original"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:inputType="textPersonName"/>

    <TextView
        android:id="@+id/text_label_word_translation"
        style="@style/text_on_secondary.h4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/translation"
        app:layout_constraintBottom_toBottomOf="@+id/edit_word_translation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_word_translation" />

    <EditText
        android:id="@+id/edit_word_translation"
        style="@style/text_on_secondary.h4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_label_word_translation"
        app:layout_constraintTop_toBottomOf="@+id/edit_word_original"
        android:layout_marginStart="8dp"
        android:inputType="textPersonName"/>

    <TextView
        android:id="@+id/text_apply"
        style="@style/text_on_secondary.h4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/linear_main"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/apply"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>